# gpt_synth_seq

./: .pre-commit-config.yaml  setup.cfg
data/: dataset.py
src/gpt_synth_seq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gpt_synth_seq/data/: dataset.py
src/gpt_synth_seq/model/: catm_250epochs.fasta  codon_tokenizer.json  config.py  generate_sequences.py  gpt2.py
