[metadata]
name = gpt_synth_seq
version = 0.0.1
description = Using GPT models and huggingface for DNA sequence generation.
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url =

author =
author_email =
license =
keywords =

[options]
packages = find:
package_dir =
    = src

install_requires =
    pytest
    black
    flake8
    pre-commit
    pyyaml
    pydantic
    biopython
    tqdm
    wandb
    transformers
    tokenizers

python_requires = >=3.6

[options.packages.find]
exclude =
    data
    test
    docs
    env

where = src

[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231,F541
© 2021 GitHub, Inc.
Terms
Privacy
Security
Status
Docs
Contact GitHub
Pricing
API
Training
Blog
About
